Bug 1352373 - Use IsNotGray in all gray marking assertions. r=sfink, a=lizzard